--- a/Project01/src/index.css
+++ b/Project01/src/index.css
@@ -1,6 +1,8 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Montserrat&family=Quicksand&display=swap');
 
 .cls-1 {
   @apply fill-[#ededed];
@@ -8,4 +10,113 @@
 
 .cls-2 {
   @apply fill-[#e68ea1];
+}
+
+
+:root{
+
+    /* Paleta de cores pra gente usar no projeto */
+
+    --color-background: #ededed;
+    --color-primary:#e68ea1;
+    --color-secondary: #dedede;
+    --color-accent: #480f38;
+    
+    --border-primary:#b46f7e;
+
+    --font-primary:'Quicksand', sans-serif;
+    --font-secondary: 'Montserrat', sans-serif;;
+    --font-accent: 'Courgette', cursive;
+}
+
+*{
+    font-family: var(--font-secondary) !important;
+}
+
+
+/* ---------------------------------- Backround */
+
+.bg-primary{
+    background: var(--color-primary) !important;
+}
+.bg-secondary{
+    background: var(--color-secondary) !important;
+}
+.bg-accent{
+    background: var(--color-accent);
+}
+.bg-default{
+    background: var(--color-background);
+}
+
+/* ---------------------------------- Text */
+
+.text-primary{
+    color: var(--color-primary) !important;
+}
+.text-secondary{
+    color: var(--color-secondary) !important;
+}
+.text-accent{
+    color: var(--color-accent);
+}
+
+.font-primary{
+    font-family: var(--font-primary) !important;
+}
+.font-secondary{
+    font-family: var(--font-secondary) !important;
+}
+.font-accent{
+    font-family: var(--font-accent) !important;
+}
+
+/* ---------------------------------- Buttons */
+
+.btn-primary{
+    background: var(--color-primary) !important;
+    border: 1px solid var(--border-primary) !important;
+}
+.btn-primary:hover{
+    background: var(--border-primary) !important;
+}
+
+.btn-secondary{
+    background: var(--color-secondary) !important;
+}
+
+.btn-accent{
+    color: white;
+    background: var(--color-accent) !important;
+}
+.btn-accent:hover{
+    color: white !important;
+    background: var(--color-accent) !important;
+}
+
+/* ---------------------------------- border */
+
+.border-primary{
+    border-color: var(--color-primary) !important;
+}
+
+
+/* ---------------------------------- Image Frame */
+img{
+    position: relative;
+    z-index: 2;
+}
+.img-frame{
+    position: relative;
+}
+.img-frame::after{
+    position: absolute;
+    display: block;
+    content: '';
+    background-color: var(--color-accent);
+    width: 100%;
+    height: 100%;
+    top: 10px;
+    left: 10px;
+    z-index: 0;
 }
